# rust-web-configuration-example

./: Cargo.toml  README.md
config/: Default.toml  Development.toml  Production.toml  Testing.toml
configjson/: Default.json  Development.json  Production.json
src/: main.rs  settings.rs
